fixed styling bug

--- a/templates/partials/hero.html
+++ b/templates/partials/hero.html
@@ -1,4 +1,5 @@
 {# templates/partials/hero.html #}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 <section id="{{ hero_id|default:'page-hero' }}"
          class="relative isolate overflow-hidden min-h-[60svh] md:min-h-[70svh] lg:min-h-[70svh]">
