fixed styling bug

--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -5,7 +5,7 @@
 
 {# HERO – Half viewport + Parallax #}
 
-{% include "partials/hero.html" with hero_title=page.title hero_intro=page.intro %}
+{% include "partials/hero.html" with page=page hero_title=page.title hero_intro=page.intro %}
 
 {# LISTA MED INLÄGG – Stagger #}
 <section class="py-16 md:py-20 bg-background">
