--- a/templates/base.html
+++ b/templates/base.html
@@ -279,7 +279,12 @@
                             class="w-10 h-10 bg-white/10 rounded-lg flex items-center justify-center 
                                     hover:bg-white/20 hover:scale-110 transition-all duration-300"
                             aria-label="X">
-                                <i data-lucide="x" class="w-5 h-5"></i>
+                            <svg viewBox="0 0 24 24" class="w-5 h-5" aria-hidden="true">
+                                <path
+                                    fill="currentColor"
+                                    d="M18.9 3H15.7L12.5 7.2L9 3H3.5L9.8 11.1L3.1 21H6.3L10.1 15.9L13.9 21H19.4L13.1 12.6L18.9 3Z"
+                                />
+                            </svg>
                             </a>
                             {% endif %}
 
